# ENTRENAMIENTO

BASURERO/: CMakeLists.txt  main.cpp  slot1.cpp  slot2.cpp  slot3.cpp  slot4.cpp  slot6.cpp  slot7.cpp
Mode2/: CMakeLists.txt  PC2.P1.1.cpp  PC2.P3.1.cpp  PC2_P1_2024_II.cpp  PC2_P2_2024_II.cpp  PC2_P3_2024_II.cpp  ejm1.0.cpp  ejm1.1.cpp  ejm1.2.cpp  slot0.cpp  slot1.1.cpp  slot1.2.cpp  slot1.3.cpp  slot1.cpp  slot2.cpp  slot3.1.cpp  slot3.2.cpp  slot3.3.cpp  slot3.cpp  slot4.cpp  slot5.cpp  slot6.cpp  slot7.1.cpp  slot7.2.cpp  slot7.cpp  slot8.cpp
Mode3/: CMakeLists.txt
Mode4/: CMakeLists.txt  slot1.4.cpp  slot1_0.cpp
Mode5/: CMakeLists.txt  slot1.0.cpp  slot1.1.cpp  slot1.2.cpp  slot1.3.cpp  slot1_0.cpp  slot1_1.cpp  slot1_2.cpp
Mode6/: CMakeLists.txt  slot1_0.cpp  slot1_2.cpp  slot1_3.cpp
Mode7/: CMakeLists.txt  slot1_0.cpp  slot1_1.cpp  slot1_2.cpp
Mode7/Archivos/: datos1.txt
Mode7/ArchivosBase/: slot1_0.cpp  slot1_1.cpp  slot1_2.cpp  slot2_0.cpp  slot2_1.cpp
Mode7/BinarioBase/: slot3_0.cpp  slot4_0.cpp  slot4_1.cpp  slot4_1_0.cpp  slot4_1_1.cpp  slot4_1_2.cpp
Mode7/EjerciciosAudanteA/: ejercicioA1_0.cpp  ejercicioA2_0.cpp  ejercicioA2_1.cpp  ejercicioA2_1_1.cpp  ejercicioA2_1_2.cpp
Mode8/: CMakeLists.txt  slot1_0.cpp  slot1_1.cpp  slot1_2.cpp  slot1_3.cpp  slot1_4.cpp  slot1_5.cpp
Mode9/: CMakeLists.txt
Mode9/Ejercicios/: ejercicio1_0.cpp
TAREAS/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  slot10.cpp  slot11.cpp  slot12.cpp  slot13.cpp  slot14.cpp  slot15.cpp  slot16.cpp  slot17.cpp  slot18.cpp  slot19.cpp  slot2.cpp  slot20.cpp  slot21.cpp  slot22.cpp  slot23.cpp  slot24.cpp  slot25.1.cpp  slot25.cpp  slot26.cpp  slot27.cpp  slot28.cpp  slot29.1.cpp  slot29.cpp  slot30.cpp  slot31.cpp  slot32.cpp  slot33.cpp  slot34.cpp  slot35.cpp  slot36.cpp  slot37.cpp  (+8 more)
TAREAS/files/: Agenda.txt
scavenge/: CMakeLists.txt
