cmake_minimum_required(VERSION 3.31)
project(BASURERO)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(slot1 slot1.cpp)
add_executable(slot2 slot2.cpp)
add_executable(slot3 slot3.cpp)
add_executable(slot4 slot4.cpp)
add_executable(slot5 slot5.cpp)
add_executable(slot6 slot6.cpp)
add_executable(slot7 slot7.cpp)
add_executable(slot8 slot8.cpp)
add_executable(slot8.5 slot8.5.cpp)
add_executable(slot9 slot9.cpp)
add_executable(slot10 slot10.cpp)
add_executable(slot11 slot11.cpp)
add_executable(slot12 slot12.cpp)
