cmake_minimum_required(VERSION 3.29)
project(Mode2)

set(CMAKE_CXX_STANDARD 14)

add_executable(ejm1.0 ejm1.0.cpp)
add_executable(ejm1.1 ejm1.1.cpp)
add_executable(ejm1.2 ejm1.2.cpp)


add_executable(slot0 slot0.cpp)
add_executable(slot1 slot1.cpp)
add_executable(slot1.1 slot1.1.cpp)
add_executable(slot1.2 slot1.2.cpp)
add_executable(slot1.3 slot1.3.cpp)

add_executable(slot2 slot2.cpp)

add_executable(slot3 slot3.cpp)
add_executable(slot3_1 slot3.1.cpp)
add_executable(slot3_2 slot3.2.cpp)
add_executable(slot3_3 slot3.3.cpp)

add_executable(slot4 slot4.cpp)
add_executable(slot5 slot5.cpp)
add_executable(slot6 slot6.cpp)
add_executable(slot7 slot7.cpp)
add_executable(slot8 slot8.cpp)

add_executable(P1.2 PC2.P1.1.cpp)
add_executable(P2.2 PC2.P2.1.cpp)
add_executable(P3.2 PC2.P3.1.cpp)

add_executable(P1.1 PC2_P1_2024_II.cpp)
add_executable(P2.1 PC2_P2_2024_II.cpp)
add_executable(P3.1 PC2_P3_2024_II.cpp)
