cmake_minimum_required(VERSION 3.31)
project(BASURERO)

set(CMAKE_CXX_STANDARD 20)

add_executable(main1 main1.cpp)
add_executable(main2 main2.cpp)
add_executable(main3 main3.cpp)
add_executable(main4 main4.cpp)

add_executable(slot1 slot1.cpp)
add_executable(slot2 slot2.cpp)
add_executable(slot3 slot3.cpp)
add_executable(slot4 slot4.cpp)
add_executable(slot5 slot5.cpp)
add_executable(slot6 slot6.cpp)
add_executable(slot7 slot7.cpp)
add_executable(slot8 slot8.cpp)
add_executable(slot9 slot9.cpp)
add_executable(slot10 slot10.cpp)
add_executable(slot11 slot11.cpp)
add_executable(slot12 slot12.cpp)
add_executable(slot13 slot13.cpp)
add_executable(slot14 slot14.cpp)
add_executable(slot15 slot15.cpp)
add_executable(slot16 slot16.cpp)
add_executable(slot17 slot17.cpp)
add_executable(slot18 slot18.cpp)
add_executable(slot19 slot19.cpp)
add_executable(slot20 slot20.cpp)
add_executable(slot21 slot21.cpp)
add_executable(slot22 slot22.cpp)
add_executable(slot23 slot23.cpp)
add_executable(slot24 slot24.cpp)
add_executable(slot25 slot25.cpp)
add_executable(slot25.1 slot25.1.cpp)
add_executable(slot26 slot26.cpp)
add_executable(slot27 slot27.cpp)
add_executable(slot28 slot28.cpp)
add_executable(slot29 slot29.cpp)
add_executable(slot30 slot30.cpp)
add_executable(slot31 slot31.cpp)
add_executable(slot32 slot32.cpp)
add_executable(slot33 slot33.cpp)
add_executable(slot34 slot34.cpp)
add_executable(slot35 slot35.cpp)